FISH-7979: initial investigation to run cdi 4.1